{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 2333,
  "lineage": "200ef9fd-78e9-ba5e-3301-9df89bbcefc4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-013214ac9087814e8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-228-99-42.compute-1.amazonaws.com",
            "public_ip": "34.228.99.42",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:682757024571:instance/i-00e4052cb9d441e2c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e4052cb9d441e2c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vpc_prod",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d4b0969dfc71602c",
            "private_dns": "ip-10-20-1-119.ec2.internal",
            "private_ip": "10.20.1.119",
            "public_ip": "54.165.32.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00c71200669d22475",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a93ee2a3b08df2e5",
            "tags": {
              "Name": "web-production"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01accc58419327825"
            ]
          },
          "dependencies": [
            "aws_security_group.all_traffic1",
            "aws_subnet.web1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682757024571:internet-gateway/igw-067089361d622156b",
            "id": "igw-067089361d622156b",
            "owner_id": "682757024571",
            "tags": {
              "Name": "IGW_production"
            },
            "vpc_id": "vpc-06f3829dfcec9bd9e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682757024571:internet-gateway/igw-0fa5178ad44e946eb",
            "id": "igw-0fa5178ad44e946eb",
            "owner_id": "682757024571",
            "tags": {
              "Name": "IGW_development"
            },
            "vpc_id": "vpc-09538543f255a645d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013214ac9087814e8",
            "id": "nat-06275227cafd090cf",
            "network_interface_id": "eni-08d735ec67f9c16ad",
            "private_ip": "10.20.1.57",
            "public_ip": "34.228.99.42",
            "subnet_id": "subnet-0a93ee2a3b08df2e5",
            "tags": {
              "Name": "NatGateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.web1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04aedb4e25aa6a63d",
            "owner_id": "682757024571",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-067089361d622156b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-06f3829dfcec9bd9e"
          },
          "dependencies": [
            "aws_internet_gateway.gw1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05c3ece6e9736b4d4",
            "owner_id": "682757024571",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "11.20.4.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-07e1e648a29538610",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "vpc_id": "vpc-06f3829dfcec9bd9e"
          },
          "dependencies": [
            "aws_vpc.dev",
            "aws_vpc.main",
            "aws_vpc_peering_connection.Prod-Dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08bdde98688cb4bd1",
            "owner_id": "682757024571",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06275227cafd090cf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table with Internet Requests"
            },
            "vpc_id": "vpc-06f3829dfcec9bd9e"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw1",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.web1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00a545abb86fd9796",
            "owner_id": "682757024571",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa5178ad44e946eb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table Development"
            },
            "vpc_id": "vpc-09538543f255a645d"
          },
          "dependencies": [
            "aws_internet_gateway.gw2",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05b1f39c7c819fbf4",
            "owner_id": "682757024571",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.20.4.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-07e1e648a29538610",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table Development"
            },
            "vpc_id": "vpc-09538543f255a645d"
          },
          "dependencies": [
            "aws_vpc.dev",
            "aws_vpc.main",
            "aws_vpc_peering_connection.Prod-Dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c88bbe3890b2a4ea",
            "route_table_id": "rtb-04aedb4e25aa6a63d",
            "subnet_id": "subnet-0a93ee2a3b08df2e5"
          },
          "dependencies": [
            "aws_internet_gateway.gw1",
            "aws_route_table.r1",
            "aws_subnet.web1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ef8251cd6265a34",
            "route_table_id": "rtb-05c3ece6e9736b4d4",
            "subnet_id": "subnet-0bc158c0ea6c3d0a2"
          },
          "dependencies": [
            "aws_route_table.r2",
            "aws_subnet.app2",
            "aws_vpc.dev",
            "aws_vpc.main",
            "aws_vpc_peering_connection.Prod-Dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0992795abbbba7f20",
            "route_table_id": "rtb-05c3ece6e9736b4d4",
            "subnet_id": "subnet-0bb78db2c2d2c0c36"
          },
          "dependencies": [
            "aws_route_table.r2",
            "aws_subnet.DB1",
            "aws_vpc.dev",
            "aws_vpc.main",
            "aws_vpc_peering_connection.Prod-Dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b056028244b0a257",
            "route_table_id": "rtb-08bdde98688cb4bd1",
            "subnet_id": "subnet-00238860b0237c408"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw1",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.r3",
            "aws_subnet.app1",
            "aws_subnet.web1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "f",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0296cd839bbec03a0",
            "route_table_id": "rtb-08bdde98688cb4bd1",
            "subnet_id": "subnet-03c841fa358c57894"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw1",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.r3",
            "aws_subnet.DBCache",
            "aws_subnet.web1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0332723c3272a473b",
            "route_table_id": "rtb-00a545abb86fd9796",
            "subnet_id": "subnet-0edbff36edca87b6a"
          },
          "dependencies": [
            "aws_internet_gateway.gw2",
            "aws_route_table.r4",
            "aws_subnet.web2",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "h",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7b831fd2297dd4d",
            "route_table_id": "rtb-05b1f39c7c819fbf4",
            "subnet_id": "subnet-0afa22345a657be82"
          },
          "dependencies": [
            "aws_route_table.r5",
            "aws_subnet.DB2",
            "aws_vpc.dev",
            "aws_vpc.main",
            "aws_vpc_peering_connection.Prod-Dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_traffic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682757024571:security-group/sg-01accc58419327825",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01accc58419327825",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SG_VPC",
            "name_prefix": "",
            "owner_id": "682757024571",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f3829dfcec9bd9e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_traffic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682757024571:security-group/sg-0fe33cc4b03c2da81",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe33cc4b03c2da81",
            "ingress": [
              {
                "cidr_blocks": [
                  "11.20.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SG_VPC",
            "name_prefix": "",
            "owner_id": "682757024571",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-09538543f255a645d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_inbound_access1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3860601076",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01accc58419327825",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.all_traffic1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_inbound_access2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3441912209",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fe33cc4b03c2da81",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.all_traffic2",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DB1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682757024571:subnet/subnet-0bb78db2c2d2c0c36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.4.0/24",
            "id": "subnet-0bb78db2c2d2c0c36",
            "map_public_ip_on_launch": false,
            "owner_id": "682757024571",
            "tags": {
              "Name": "DB-production"
            },
            "vpc_id": "vpc-06f3829dfcec9bd9e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DB2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682757024571:subnet/subnet-0afa22345a657be82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "11.20.4.0/24",
            "id": "subnet-0afa22345a657be82",
            "map_public_ip_on_launch": false,
            "owner_id": "682757024571",
            "tags": {
              "Name": "DB-development"
            },
            "vpc_id": "vpc-09538543f255a645d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DBCache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682757024571:subnet/subnet-03c841fa358c57894",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.20.5.0/24",
            "id": "subnet-03c841fa358c57894",
            "map_public_ip_on_launch": false,
            "owner_id": "682757024571",
            "tags": {
              "Name": "DBCache"
            },
            "vpc_id": "vpc-06f3829dfcec9bd9e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682757024571:subnet/subnet-00238860b0237c408",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-00238860b0237c408",
            "map_public_ip_on_launch": false,
            "owner_id": "682757024571",
            "tags": {
              "Name": "app1"
            },
            "vpc_id": "vpc-06f3829dfcec9bd9e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682757024571:subnet/subnet-0bc158c0ea6c3d0a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.3.0/24",
            "id": "subnet-0bc158c0ea6c3d0a2",
            "map_public_ip_on_launch": false,
            "owner_id": "682757024571",
            "tags": {
              "Name": "app2"
            },
            "vpc_id": "vpc-06f3829dfcec9bd9e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682757024571:subnet/subnet-0a93ee2a3b08df2e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-0a93ee2a3b08df2e5",
            "map_public_ip_on_launch": true,
            "owner_id": "682757024571",
            "tags": {
              "Name": "web-production"
            },
            "vpc_id": "vpc-06f3829dfcec9bd9e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682757024571:subnet/subnet-0edbff36edca87b6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "11.20.1.0/24",
            "id": "subnet-0edbff36edca87b6a",
            "map_public_ip_on_launch": true,
            "owner_id": "682757024571",
            "tags": {
              "Name": "web-development"
            },
            "vpc_id": "vpc-09538543f255a645d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682757024571:vpc/vpc-09538543f255a645d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.20.0.0/16",
            "default_network_acl_id": "acl-0bb3b0b6a52cd3b5e",
            "default_route_table_id": "rtb-0552b5f2654096243",
            "default_security_group_id": "sg-0f04e8badf53983cb",
            "dhcp_options_id": "dopt-2883eb52",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09538543f255a645d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0552b5f2654096243",
            "owner_id": "682757024571",
            "tags": {
              "Name": "vpc_development"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682757024571:vpc/vpc-06f3829dfcec9bd9e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0f67ab7917fa6b227",
            "default_route_table_id": "rtb-0e394983fe044295a",
            "default_security_group_id": "sg-06744bcd7fa6d5535",
            "dhcp_options_id": "dopt-2883eb52",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06f3829dfcec9bd9e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e394983fe044295a",
            "owner_id": "682757024571",
            "tags": {
              "Name": "vpc_production"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "Prod-Dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-07e1e648a29538610",
            "peer_owner_id": "682757024571",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-06f3829dfcec9bd9e",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-09538543f255a645d"
          },
          "dependencies": [
            "aws_vpc.dev",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}